--- a/app/src/main/res/layout/add_customer_dialog.xml
+++ b/app/src/main/res/layout/add_customer_dialog.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="Customer ka nam darj karein"
+            android:text="Enter your cuntomer name"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
